# mail-service-wrust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
