[package]
name = "mail-service-wrust"
version = "0.1.0"
authors = ["Tuong Nguyen <tuongn09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nats = "0.9.8"
tokio = { version = "1.4.0", features = ["full"] }
sendgrid = "0.17.0"
serde = "1.0.125"
serde_json = "1.0.64"
